<?xml version="1.0"?>
<package format="3">
  <name>tf_manager</name>
  <version>0.1.0</version>
  <description>Package container for TF layout and static transform bringup.</description>

  <maintainer email="dell@example.com">dell</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
