<?xml version="1.0"?>
<package format="3">
  <name>unitree_api</name>
  <version>0.1.0</version>
  <description>Minimal Unitree API message compatibility package for the A2 web console.</description>

  <maintainer email="dell@example.com">dell</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
